<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/avtivity_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/aboutactivity_topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/avtivity_top_bar_bg"
        android:padding="10dp" >

        <TextView
            android:id="@+id/aboutactivity_return_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_centerVertical="true"
            android:text="返回"
            android:textColor="@color/return_text_color"
            android:textSize="@dimen/return_text_size" >
        </TextView>

        <TextView
            android:id="@+id/aboutactivity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:text="关于我们"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/title_text_size" >
        </TextView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutUsTitle"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/aboutus_text_size"
                android:layout_marginTop="5dip"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >


                <TextView
                    android:id="@+id/aboutUsContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutUsContent"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size"
                    android:layout_marginTop="5dip"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus1"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size"
                    android:layout_marginTop="5dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus2"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size"
                    android:layout_marginTop="5dip"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus3"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size"
                    android:layout_marginTop="5dip"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus4"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size"
                    android:layout_marginTop="5dip"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus5"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size"
                    android:layout_marginTop="5dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus6"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size"
                    android:layout_marginTop="5dip"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus7"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size"
                    android:layout_marginTop="5dip"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus8"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size"
                    android:layout_marginTop="5dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/aboutus9"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="horizontal" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/aboutus10"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/aboutus_text_size" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutustial"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/aboutus_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>